<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <artifactId>signservice-integration-rest</artifactId>
  <groupId>se.idsec.signservice.integration</groupId>
  <packaging>jar</packaging>
  <version>1.0.0-SNAPSHOT</version>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.2.6.RELEASE</version>
    <relativePath />
  </parent>

  <name>IDsec Solutions :: SignService :: Integration REST Service</name>
  <description>SignService Integration REST Service</description>
  <url>https://github.com/idsec-solutions/signservice-integration-rest</url>

  <properties>
    <java.version>11</java.version>
    <sign.api.version>1.1.0</sign.api.version>
  </properties>

  <dependencyManagement>

    <dependencies>

      <dependency>
        <groupId>se.idsec.signservice.commons</groupId>
        <artifactId>signservice-bom</artifactId>
        <version>1.1.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>se.idsec.signservice.integration</groupId>
        <artifactId>signservice-integration-api</artifactId>
        <version>${sign.api.version}</version>
        <type>jar</type>
        <scope>compile</scope>
      </dependency>

      <dependency>
        <groupId>se.idsec.signservice.integration</groupId>
        <artifactId>signservice-integration-impl</artifactId>
        <version>1.1.0</version>
        <type>jar</type>
        <scope>compile</scope>
      </dependency>

      <dependency>
        <groupId>se.idsec.signservice.integration</groupId>
        <artifactId>signservice-integration-xml</artifactId>
        <version>1.1.0</version>
        <type>jar</type>
        <scope>compile</scope>
        <exclusions>
          <exclusion>
            <groupId>se.idsec.signservice.integration</groupId>
            <artifactId>signservice-integration-impl</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>se.idsec.signservice.integration</groupId>
        <artifactId>signservice-integration-pdf</artifactId>
        <version>1.1.0</version>
        <type>jar</type>
        <scope>compile</scope>
        <exclusions>
          <exclusion>
            <groupId>se.idsec.signservice.integration</groupId>
            <artifactId>signservice-integration-impl</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

    </dependencies>

  </dependencyManagement>

  <dependencies>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <dependency>
      <groupId>se.idsec.signservice.integration</groupId>
      <artifactId>signservice-integration-impl</artifactId>
    </dependency>

    <dependency>
      <groupId>se.idsec.signservice.integration</groupId>
      <artifactId>signservice-integration-xml</artifactId>
    </dependency>

    <dependency>
      <groupId>se.idsec.signservice.integration</groupId>
      <artifactId>signservice-integration-pdf</artifactId>
    </dependency>

  </dependencies>

  <build>

    <plugins>
    
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>    

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <delimiters>
            <delimiter>@</delimiter>
          </delimiters>
          <nonFilteredFileExtensions>
            <nonFilteredFileExtension>jks</nonFilteredFileExtension>
            <nonFilteredFileExtension>p12</nonFilteredFileExtension>
          </nonFilteredFileExtensions>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>build-info</id>
            <goals>
              <goal>build-info</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce</id>
            <configuration>
              <rules>
                <dependencyConvergence />
              </rules>
            </configuration>
            <goals>
              <goal>enforce</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Support for Docker -->
      <plugin>
        <groupId>com.spotify</groupId>
        <artifactId>dockerfile-maven-plugin</artifactId>
        <version>1.4.9</version>
        <configuration>
          <repository>${DOCKER_REPO}/${project.artifactId}</repository>
          <repository>docker.eidastest.se:5000/${project.artifactId}</repository>
          <tag>latest</tag>
          <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
        </configuration>
      </plugin>

    </plugins>

  </build>

</project>
